integrated optimus with lulu money

--- a/optimus/.android/local.properties
+++ b/optimus/.android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=/Users/nishanth/Library/Android/sdk
-flutter.sdk=/usr/local/flutter
+sdk.dir=C:\\Users\\356400290\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\356400290\\Documents\\flutter
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
